fixed button being weird on mobile

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ main p{
   background-color: #0E4C7F;
   color:white;
   font-family: 'Oswald', sans-serif;
-  font-size: 3em;
+  font-size: 2em;
   font-weight: bold;
   width:30%;
   height:100px;
@@ -114,6 +114,12 @@ main p{
 
 #myBtn:hover{
   background-color: #42AED2;
+}
+
+@media only screen and (min-width: 1000px){
+  #myBtn{
+    font-size: 3em;
+  }
 }
 
 /*END BANNER SUBTEXT*/
